css/99s.css
body {
    background: url("../img/header_bg.jpg") repeat-x scroll 0 0 transparent;
}

h1,h2,h3,h4,h5 {
  font-family: "Open Sans", verdana, Sans-serif;
  font-weight: normal;
  margin-bottom: 15px;
}

h2 {
    margin-top: 20px;
}

/* #docs h2 {display:none} */
#docs h3 {font-size:24px;line-height:36px;}

ol ol {
    list-style: lower-latin;
}

a.code {
    color: #848c48;
}

a.code:hover {
    color: #6c733c;
}

.lined-header {
    background: url("../img/header_line.png") repeat-x scroll center center transparent;
}

.lined-header span {
    background: #fff;
    padding-right: 15px;
}

#page-head {
    background: url("../img/header_bg_center.jpg") no-repeat scroll center top transparent;
    height: 75px;
    width: 100%;
}

.home #page-head  {
    height: 104px;
}

#topbar {
    height: 60px;
    padding-bottom: 8px;
}
#logo {
    margin-bottom: 0;
}

#logo a {
    background: url("../img/logo.png") no-repeat scroll 0 0 transparent;
    display: inline-block;
    height: 45px;
    margin: 10px 0;
    text-indent: -5000px;
    width: 84px;
}

#side-header li {
    display: inline-block;
}

#side-header {
    height: 44px;
    padding: 25px 0 0;
    text-align: right;
}
#side-header nav a {
    border-radius: 6px 6px 6px 6px;
    color: #333333;
    font-family: "Open Sans",Verdana,Sans-serif;
    font-size: 17px;
    margin: 0 5px;
    padding: 8px;
}
#side-header nav li.active a {
    background: none repeat scroll 0 0 #1D5C70;
    color: white;
    text-shadow: 0.1em 0.1em 0.05em #333333;
}
#side-header nav li.active a:hover {
    background: none repeat scroll 0 0 #144858;
    text-decoration:none;        
}

#side-header nav, #side-header #social {
    display: inline-block;
    margin-left: 5px;
}

#social li {
    vertical-align: sub;
}

#social .dropdown-menu li {
    display: block;
    text-align: left;
}      

.dropdown.open .dropdown-toggle {
    background: none;
}

#page-head .navbar {
    height: 36px;
    font-family: "Open Sans",Verdana,Sans-serif;
}
#page-head .navbar-inner {
    background: none repeat scroll 0 0 transparent;
    border: medium none;
    box-shadow: none;
}

#page-head .navbar .nav li a {
    background: none repeat scroll 0 0 transparent;
    color: #555555;
    font-size: 15px;
    padding: 8px 12px;
    text-shadow: none;
}

#page-head .navbar .nav li a:hover {
    text-decoration:underline;
}

#page-head .navbar .nav li.active a {
    background: none repeat scroll 0 0 #1D5C70;
    border-radius: 5px 5px 5px 5px;
    color: #FFFFFF;
    height: 18px;
    margin: 4px 0;
    padding: 4px 12px;
    text-shadow: 0.1em 0.1em 0.05em #333333;
}

#page-head .navbar .nav li.active a:hover {
    background: none repeat scroll 0 0 #144858;
    text-decoration:none;
}

#page-head .navbar .nav {
    height: 35px;
}

#page-head .brand {
    padding: 9px 10px;
    color: #333;
    font-weight: bold;
    font-size: 16px;
    font-style: normal;
}

#contents ul {
    margin-left: 0px;
}

#contents ul li, #contents ol li {
    line-height: 1.4em;
    margin-bottom: 15px;
}

#contents ul.extra_margin li, #contents ol.extra_margin li {
    margin-bottom: 30px;
}

#contents ul li {
    background: url("../img/big_bullet.png") no-repeat scroll 0 center transparent;
    list-style: none outside none;
    padding-left: 30px;
}

#contents .row > div {
    padding-bottom: 35px;
}

#home-carousel {
    background: url("../img/home/carousel_light_effect.png") no-repeat scroll center bottom transparent;
    color: #FFFFFF;
    height: 298px;
    margin-bottom: 0;
    padding-top: 1px;
    text-shadow: 0.1em 0.1em 0.05em #333333;
}


#home-carousel h1 {
    font-size: 40px;
    margin-bottom: 20px;
    margin-top: 35px;
}

#home-carousel h1, #home-carousel h2, #home-carousel h3  {
  color: #FFFFFF;
  font-weight: normal;
  margin: 20px 0;
}

#home-carousel p {
  margin: 20px 0;
  font-size: 15px;
}

#home-carousel .carousel-inner {
    height: 299px;
}

.cowboy-logo {
	margin-top: 5px;
}

.ranch-logo {
	margin-left:20px;margin-top: -2px;
}

.bullet-logo {
	margin-left: 200px;
}

.sheriff-logo {
	margin-left:100px;margin-top: -10px;
}

.right-buttons {
  text-align: right;
}

#contents.home {
    background: url("../img/home/carousel_bg_blue.png") repeat-x scroll 0 -1px transparent;
}

#company-description {
    height: 76px;
    margin-bottom: 15px;
    overflow: hidden;
}

#company-description div.paragraph {
    background: url("../img/header_line.png") repeat-x scroll center center transparent;
    color: #333333;
    font-style: italic;
    line-height: 1.3em;
    margin: 14px 0;
    text-align: center;
}

#company-description p {
    background: none repeat scroll 0 0 #FAFAFA;
    display: inline-block;
    width: 70%;
    font-size: 18px;
}

#services .span4 {
    width: 295px;
    margin-left: 25px;
}

#services header p {
    color: #777;
}

#services p {
    font-size: 13px;
}

#services header h2 {
    font-size: 27px;
    color: #333;
    margin-bottom: 4px;
}

#services header {
    margin-bottom: 10px;
    padding-left:  90px;
    padding-bottom: 6px;
}

#services .support {
    border-bottom: 5px solid #d8e3a0;
    background: url("../img/home/support_ico.jpg") no-repeat left center;
}

#services .consulting {
    border-bottom: 5px solid #fdd2dd;
    background: url("../img/home/consulting_ico.jpg") no-repeat left center;
}

#services .training {
    border-bottom: 5px solid #7fc1d0;
    background: url("../img/home/training_ico.jpg") no-repeat left center;
}

#services .service-description {
  text-align: justify;
  margin-bottom: 15px;
  height: 150px;
}

#events {
  margin-top: 15px;
}

#events .grey {
  background: #FAFAFA;
}

#events h2 {
    margin: 10px 0 10px 0px;
    background: url("../img/header_line.png") repeat-x scroll center center transparent;
}

#events p {
    font-style: italic;
    font-size: 14px;
}

#events h3 {
    margin-bottom: 10px;
}

#events h3 a {
    color: #848C48;
    font-size: 15px;
}

#events h3 a:hover {
    color: #717839;
    text-decoration: underline;
}

#events h3 {
    line-height: 1.2em;
}

#events h3, #events p {
    padding-left: 80px;
}

#events .event .date .day, .blog_item .date .day {
    font-size: 24px;
    display: block;
}

#events .event .date .day { margin-bottom: 4px;}

#events .event .month, .blog_item .date {
    font-size: 16px;
}

#events .event .date, .blog_item .date {
    background: #acb75c;
    height: 50px;
    width: 60px;
    border-radius: 34px;
    border: 4px solid #c5d573;
    color: #ffffff;
    float: left;
    text-align: center;
    padding-top: 10px;
    padding-left: 0;
    font-style: normal;
}

.blog_item .date {
    margin-left: -60px;
    margin-top: -68px;
    position: absolute;
}

.blog_item header h1, .blog_item header h2 {
    margin-left: 20px;
}

.blog_item {
    border-bottom: 1px solid #EEEEEE;
}

.blog_item a.read_more {
    color: #fff;
    background: none repeat scroll 0 0 #ACB75C;
    border-radius: 5px;
    padding: 5px 10px;
    display: inline-block;
    margin-top: 5px;
    font-weight: bold;
    font-size: 12px;
}

.blog_item a.read_more:hover {
    background: none repeat scroll 0 0 #C5D573;
}


.blog_item a.read-more:hover {

}

.blog_old_new .old_posts {
    float: right;
}
.blog_old_new a {
    font-size: 18px;
}
.blog_old_new {
    margin-top: 15px;
}

#events .eventslist  h2 span {
    background: white;
    padding-right:  5px;
}

#events .newsitems h2 span {
    background: #fafafa;
    padding-right: 5px;
} 

.home .eventslist, .newsitems {
    height: 385px;
}

#events .article-container {
    padding: 0 14px;
}

.newsitems article {
    background: url("../img/big_bullet.png") no-repeat scroll 11px 25px transparent;
}
.eventslist article, .newsitems article {
    border-bottom: 1px solid #EEEEEE;
    height: 150px;
    margin-bottom: 10px;
}
#events .newsitems h3, #events .newsitems p {
    padding-left: 50px;
}
#events .eventslist h3, #events .eventslist p {
    padding-left: 80px;
}

footer {
    background: url("../img/footer_bg.png") repeat-x scroll 0 0 transparent;
    color: #FFFFFF;
}

footer .container {
    background: url("../img/footer_bg_light.png") repeat scroll 0 0 transparent;
    padding-top: 15px;
}

footer .credits {
  text-align: right;
}

footer nav li a, footer nav li a:hover {
    color: #fff;
}

footer nav li:first-child {
	padding-left: 0;
}
footer nav li:last-child {
    border-right: none;
}
footer nav li {
    display: inline-block;
    border-right: 1px solid;
    margin: 0;
    padding: 0 10px;
}
footer nav ul {
    margin-left: 8px;
    margin-top: 15px;
}
footer #scroll-top a:hover {
    background: rgba(0, 0, 0, 0.1);
    text-decoration: none;
}
footer #scroll-top a {
    background: rgba(255, 255, 255, 0.1);
    padding: 5px 10px;
    border-radius: 6px;
    color: #fff;
}
footer .credits p {
    margin-bottom: 5px;
}

/* Two column content pages */

#contents {
    background: url("../img/body_bg.jpg") repeat-x scroll 0 -1px #f9f9f9;
}

#contents .sidecol a:hover {
    color: #005580;
}

#contents .sidecol a {
    color: #1e5c70;
}

#contents .sidecol ul li {
    background: url("../img/big_bullet.png") no-repeat scroll -7px center transparent;
    padding-left: 15px;

}

#contents .container .sidecol {
    width: 220px;
    padding-top: 20px;
    font-size: 13px;
}

#contents .container .sidecol p {
    font-size: 13px;
}

#contents .sidecol li a.active {
    line-height: 19px!important;
}
#contents .sidecol ul li a, #contents .sidecol ol li a {
    display: block;
    padding-left: 10px;    
}
#contents .sidecol ul li, #contents .sidecol ol li {
    margin-bottom: 7px;
}


#contents .container .maincol {
    background: url("../img/container_bg.png") repeat-x scroll 0 -1px #FFFFFF;
    border-bottom: 1px solid #ccc;
    border-left: 1px solid #ccc;
    border-right: 1px solid #ccc;
    padding-right: 40px;
    padding-top: 25px;
}

.docs #contents .container .maincol.span9 {
    margin-left: -10000px;
    padding-left: 10040px;
    width: 618px;
}

#docs-nav+ul, #articles-nav, .sidecol h3{
	width: 100%;
}

#contents .container .maincol.span9 {
    margin-left: 0px;
    padding-left: 40px;
    width: 618px;
}



#contents .container .maincol.span12.wide {
    margin-left: 0;
    padding-left: 20px;
}

#contents .container .maincol.span12 {
    margin-left: 100px;
    margin-right: 100px;
    padding-left: 40px;
    padding-right: 40px;
    width: 660px;
}

#contents .sidecol li a.active, #contents .sidecol li.active a {
    background: none repeat scroll 0 0 #1D5C70;
    border-radius: 5px 5px 5px 5px;
    color: #FFFFFF;

    margin: 4px 0;
    padding: 4px 12px;
    text-shadow: 0.1em 0.1em 0.05em #333333;
}

#contents .doc-list .active:hover {
    background: none repeat scroll 0 0 #144858;
    text-decoration:none;        
    color:#fff;
}

/*  Big text alt layout */ 

body {
    font-size: 15px;
}

body p {
    font-size: 15px;
}

body .item_title {
    display: block;
    font-style: italic;
}

